--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <ul>
         <li><a href = "helloworld.html"> Hello World </a></li>
         <li><a href = "bagels.html"> Bagels </a></li>
+        <li><a href = "world.jpg"> World </a></li>
       </ul>
     </h3>
   </body>
