--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href = "helloworld.html"> Hello World </a></li>
         <li><a href = "bagels.html"> Bagels </a></li>
         <li><a href = "world.jpg"> World </a></li>
+        <li><a href = "OperatingSystemsTerminology.html"> Operating Systems Terminology </a></li>
       </ul>
     </h3>
   </body>
