--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href = "bagels.html"> Bagels </a></li>
         <li><a href = "world.jpg"> World </a></li>
         <li><a href = "OperatingSystemsTerminology.html"> Operating Systems Terminology </a></li>
+        <li><a href = "ThePlanets.html"> The Planets </a></li>
       </ul>
     </h3>
   </body>
