--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href = "world.jpg"> World </a></li>
         <li><a href = "OperatingSystemsTerminology.html"> Operating Systems Terminology </a></li>
         <li><a href = "ThePlanets.html"> The Planets </a></li>
-        <li><a href = "arithmetic.html"> Arithmetic </li>
+        <li><a href = "arithmetic.html"> Arithmetic </a></li>
       </ul>
     </h3>
   </body>
