--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <li><a href = "OperatingSystemsTerminology.html"> Operating Systems Terminology </a></li>
         <li><a href = "ThePlanets.html"> The Planets </a></li>
         <li><a href = "arithmetic.html"> Arithmetic </a></li>
+        <li><a href = "network.html"> Network </a></li>
+        <li><a href = "buses.html"> Arithmetic </a></li>
       </ul>
     </h3>
   </body>
