--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
     <table>
       <tr style = "background-color: #00b300;"><td colspan = "4" ><h1> Michael Healey </h1></td></tr>
       <tr>
-        <td style="width:800px;"><iframe src="https://forms.gle/dhJJJQ5xyA3j2wcM7" title="Contact us"></iframe></td>
+        <td <iframe src="https://forms.gle/dhJJJQ5xyA3j2wcM7" width="800" height="500" title="Contact us"></iframe></td>
       </tr>
     </table>
   </body>
