--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href = "arithmetic.html"> Arithmetic </a></li>
         <li><a href = "network.html"> Network </a></li>
         <li><a href = "buses.html"> Arithmetic </a></li>
+        <li><a href = "programming.html"> Programming </a></li>
       </ul>
     </h3>
   </body>
