--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li><a href = "network.html"> Network </a></li>
         <li><a href = "buses.html"> Arithmetic </a></li>
         <li><a href = "programming.html"> Programming </a></li>
+        <li><a href = "tickets.py"> Tickets </a></li>
       </ul>
-    </h3>
   </body>
 </html>
