--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li><a href = "buses.html"> Arithmetic </a></li>
         <li><a href = "programming.html"> Programming </a></li>
         <li><a href = "tickets.py"> Tickets </a></li>
+        <li><a href = "proglang.html"> Programming Languages </a></li>
       </ul>
   </body>
 </html>
