--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href = "programming.html"> Programming </a></li>
         <li><a href = "tickets.py"> Tickets </a></li>
         <li><a href = "proglang.html"> Programming Languages </a></li>
+        <li><a href = "software-eng.html"> Software Engineering </a></li>
       </ul>
   </body>
 </html>
