--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href = "tickets.py"> Tickets </a></li>
         <li><a href = "proglang.html"> Programming Languages </a></li>
         <li><a href = "software-eng.html"> Software Engineering </a></li>
+        <li><a href = "bagelscost.py"> Brownsville Bagels Cost </a></li>
       </ul>
   </body>
 </html>
